@@ -4,4 +4,4 @@ Address: CERN, PH-TH, CH-1211 Geneva 23, Switzerland
          Princeton University, Physics Department, Princeton, NJ 08544, USA
          LPTHE, UPMC, Boite 126, 4 Pl. Jussieu, F-75252 Paris cedex 05, France
 
-email  : salam@lpthe.jussieu.fr
+email  : gavin.salam@cern.ch
